fixed overflow issue

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,112 +1,114 @@
 h1 {
-  text-align: center;
+    text-align: center;
 }
 
 h2 {
-  margin-top: 50px;
-  text-align: center;
+    margin-top: 50px;
+    text-align: center;
 }
 
 .checkout {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  justify-items: center;
-  border: var(--color-text-grey) solid 1px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-items: center;
+    border: var(--color-text-grey) solid 1px;
 }
 
 .item {
-  grid-column: 1;
-  grid-row: 2 / span 2;
+    grid-column: 1;
+    grid-row: 2 / span 2;
+    width: 100%;
 }
 
 .item1 {
-  display: none;
+    display: none;
 }
 
 .item2 {
-  grid-column: 2;
-  grid-row: 2;
-  color: var(--color-main-blue);
-  justify-self: end;
-  align-self: center;
+    grid-column: 2;
+    grid-row: 2;
+    color: var(--color-main-blue);
+    justify-self: end;
+    align-self: center;
 }
 
 .item3 {
-  grid-column: 2;
-  grid-row: 3;
-  color: var(--color-main-blue);
-  justify-self: end;
-  align-self: center;
+    grid-column: 2;
+    grid-row: 3;
+    color: var(--color-main-blue);
+    justify-self: end;
+    align-self: center;
 }
 
 .item4 {
-  display: none;
+    color: var(--color-main-blue);
+    justify-self: end;
 }
 
 .item5 {
-  grid-column: 1;
-  grid-row: 1;
-  color: var(--color-main-blue);
+    grid-column: 1;
+    grid-row: 1;
+    color: var(--color-main-blue);
 }
 
 .item6 {
-  grid-column: 3;
-  grid-row: 2;
-  align-self: center;
+    grid-column: 3;
+    grid-row: 2;
+    align-self: center;
 }
 
 .item7 {
-  grid-column: 3;
-  grid-row: 3;
-  align-self: center;
+    grid-column: 3;
+    grid-row: 3;
+    align-self: center;
 }
 
 .item8 {
-  grid-column: 3;
-  grid-row: 1;
-  color: var(--color-main-blue);
+    grid-column: 3;
+    grid-row: 1;
+    color: var(--color-text-grey);
 }
 
 .checkout p {
-  align-self: center;
+    align-self: center;
 }
 
 .cost p {
-  text-align: right;
+    text-align: right;
 }
 
 .form-error {
-  display: none;
-  padding: 0px;
-  color: red;
+    display: none;
+    padding: 0px;
+    color: red;
 }
 
 .form-container {
-  max-width: 400px;
-  margin: 20px auto 50px;
+    max-width: 400px;
+    margin: 20px auto 50px;
 }
 
 #form,
 #newForm {
-  border: 2px solid var(--color-main-blue);
-  border-radius: 10px;
-  padding: 2em;
+    border: 2px solid var(--color-main-blue);
+    border-radius: 10px;
+    padding: 2em;
 }
 
 .field {
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
 
 input {
-  width: 100%;
+    width: 100%;
 }
 
 .cta {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 .buttons {
-  display: flex;
-  gap: 15px;
+    display: flex;
+    gap: 15px;
 }
